fix(bug): fixed invisible items

--- a/app/features/carousel/components/carousel-custom.css
+++ b/app/features/carousel/components/carousel-custom.css
@@ -10,7 +10,7 @@
     --carousel-slide-margin: 20px;
     --carousel-slide-size-md: 80px;
     --carousel-slide-size-sm: 60px;
-    --carousel-section-max: 1400px;
+    /* --carousel-section-max: 1400px; */
 }
 
 
